# Echo360-Downloader

./: .gitignore  flake.nix  pyproject.toml  test.sh
echo360/: course.py  downloader.py  hls_downloader.py  main.py  naive_m3u8_parser.py  videos.py
